Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBoolObjObject.quorum
class Main
    action Main
        Object v
        Boolean t
        t:SetValue(true)
        v = cast(Object, t)
        Test(v)
    end

    action Test(Boolean var)
        if var:GetValue() = true
            output "passed"
        end
    end
end
