Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjTextObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Text var
        var:SetValue("text")
        return var
    end
end